--- a/src/components/register.css
+++ b/src/components/register.css
@@ -29,9 +29,16 @@
   .register-text{
     margin-right:10px;
     
+    
   } 
 
   .registration-container {
+    margin: 0;
+  padding: 0;
+  
+  background-image: url("./images/register-background.jpeg"); /* Adjust the path to your background image */
+  background-size: cover;
+  background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,25 +47,28 @@
   }
   
   .register-form {
+    background-color: rgb(118, 163, 163,0.75);
     width: 300px;
     padding: 20px;
-    border: 1px solid #ccc;
+    border-style: none;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgb(234, 230, 230);
   } 
   .register-button {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #0e36a5;
+ 
     color: #fff;
     border: none;
     border-radius: 3px;
-    cursor: pointer;
+    
     font-size: 16px;
   }
   
   .register-button:hover {
-    background-color: #0056b3;
+    background-color: #15b300;
+    cursor: pointer;
   }
   
   p {
@@ -82,4 +92,18 @@
 .err-msg{
     color: red;
     margin-bottom: 3px;
+}
+.loginlink{
+  color:#27e809;
+  margin: 5px;
+}
+.form-heading{
+  font-family: serif;
+  color:#27e809;
+}
+.regsitericon-container{
+  margin-top: 80px;
+  display: flex;
+margin-left: 1000px;
+
 }
